--- a/app/src/main/res/layout/activity_update_notes.xml
+++ b/app/src/main/res/layout/activity_update_notes.xml
@@ -14,7 +14,6 @@
         android:text="Write something on your notes"
         android:fontFamily="@font/comfortaabold"
         android:textSize="26sp"
-
         android:textStyle="bold"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -55,11 +54,12 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp" />
 
+    <!-- Updated ID for the Date Button -->
     <Button
-        android:id="@+id/selectDateButton"
+        android:id="@+id/datePickerButton"
         android:layout_width="378dp"
         android:layout_height="75dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="12dp"
         android:layout_marginEnd="16dp"
         android:backgroundTint="@color/blue"
         android:drawablePadding="0dp"
@@ -77,36 +77,37 @@
         android:id="@+id/notesupdateDescriptionEditText"
         android:layout_width="0dp"
         android:layout_height="200dp"
-        android:hint="write in brief"
-        android:textSize="16sp"
-        android:padding="14dp"
-        android:fontFamily="@font/comfortaaregular"
-        android:background="@drawable/rounded_edittext"
-        android:textColor="@color/black"
-        app:layout_constraintTop_toBottomOf="@+id/selectDateButton"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="20dp"
         android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp" />
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/rounded_edittext"
+        android:fontFamily="@font/comfortaaregular"
+        android:hint="write in brief"
+        android:padding="14dp"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/datePickerButton" />
 
-    <!-- Add Notes Button -->
     <Button
         android:id="@+id/UpdateNoteButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Update Note"
-        android:textSize="16sp"
-        android:padding="20dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="36dp"
+        android:layout_marginEnd="16dp"
         android:backgroundTint="@color/blue"
         android:fontFamily="@font/comfortaabold"
+        android:padding="20dp"
+        android:text="Update Note"
         android:textColor="@color/white"
+        android:textSize="16sp"
         app:cornerRadius="12dp"
-        app:layout_constraintTop_toBottomOf="@+id/notesupdateDescriptionEditText"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="30dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/notesupdateDescriptionEditText" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
