--- a/app/src/main/res/layout/sample_notes.xml
+++ b/app/src/main/res/layout/sample_notes.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
+        android:backgroundTint="@color/yellow"
         app:cardCornerRadius="12dp"
         app:cardElevation="6dp">
 
