--- a/app/src/main/res/layout/sample_notes.xml
+++ b/app/src/main/res/layout/sample_notes.xml
@@ -54,23 +54,40 @@
                  />
 
             <!-- Edit Button -->
-            <TextView
-                android:id="@+id/labeledit"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Update"
-                android:textSize="16sp"
-                android:textColor="@color/black"
-                android:clickable="true"
-                android:focusable="true"
-                android:layout_marginTop="8dp"
-                android:background="@drawable/rounded_button"
-                android:gravity="center"
-                android:elevation="3dp"
-                android:paddingVertical="8dp"
-                android:paddingHorizontal="16dp"
-                android:backgroundTint="@color/blue"
-                android:foreground="?attr/selectableItemBackgroundBorderless" />
+                android:orientation="horizontal"
+                >
+                <TextView
+                    android:id="@+id/labeledit"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Update"
+                    android:textSize="16sp"
+                    android:textColor="@color/black"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:layout_marginTop="8dp"
+                    android:background="@drawable/rounded_button"
+                    android:gravity="center"
+                    android:elevation="3dp"
+                    android:paddingVertical="8dp"
+                    android:paddingHorizontal="16dp"
+                    android:backgroundTint="@color/blue"
+                    android:foreground="?attr/selectableItemBackgroundBorderless" />
+
+                <ImageButton
+                    android:id="@+id/favoriteButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/baseline_favorite_24"
+                    android:background="?attr/selectableItemBackgroundBorderless"
+                    android:contentDescription="Favorite"
+                    android:layout_marginTop="14dp"
+                    android:layout_marginLeft="220dp"/>
+            </LinearLayout>
+
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
