--- a/app/src/main/res/layout/fragment_favourites.xml
+++ b/app/src/main/res/layout/fragment_favourites.xml
@@ -10,7 +10,7 @@
 
     <TextView
         android:id="@+id/fav"
-        android:layout_width="128dp"
+        android:layout_width="match_parent"
         android:layout_height="46dp"
         android:layout_marginStart="12dp"
         android:layout_marginTop="20dp"
