--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#0096FF</color>
     <color name="yellow">#FEFF9C</color>
+    <color name="red">#FA0002</color>
 
 </resources>
