--- a/app/src/main/res/layout/sample_notes.xml
+++ b/app/src/main/res/layout/sample_notes.xml
@@ -13,7 +13,7 @@
         android:layout_marginEnd="8dp"
         android:backgroundTint="@color/yellow"
         app:cardCornerRadius="12dp"
-        app:cardElevation="6dp">
+        app:cardElevation="0dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -58,12 +58,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
+                android:paddingLeft="250dp"
                 >
+
                 <TextView
                     android:id="@+id/labeledit"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Update"
                     android:textSize="16sp"
                     android:textColor="@color/black"
                     android:clickable="true"
@@ -71,11 +72,14 @@
                     android:layout_marginTop="8dp"
                     android:background="@drawable/rounded_button"
                     android:gravity="center"
-                    android:elevation="3dp"
+                    android:elevation="0dp"
                     android:paddingVertical="8dp"
                     android:paddingHorizontal="16dp"
-                    android:backgroundTint="@color/blue"
-                    android:foreground="?attr/selectableItemBackgroundBorderless" />
+                    android:backgroundTint="@color/yellow"
+                    android:foreground="?attr/selectableItemBackgroundBorderless"
+                    android:drawableStart="@drawable/baseline_edit_24"
+                    android:drawablePadding="8dp"
+                   />
 
                 <ImageButton
                     android:id="@+id/favoriteButton"
@@ -84,8 +88,8 @@
                     android:src="@drawable/baseline_favorite_24"
                     android:background="?attr/selectableItemBackgroundBorderless"
                     android:contentDescription="Favorite"
-                    android:layout_marginTop="14dp"
-                    android:layout_marginLeft="220dp"/>
+                    android:layout_marginTop="16dp"
+                    />
             </LinearLayout>
 
         </LinearLayout>
